--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.22.0",
     "brfs": "^1.4.3",
@@ -70,6 +70,7 @@
     "multer": "^1.3.0",
     "mysql": "^2.13.0",
     "opencv": "git+https://github.com/peterbraden/node-opencv.git",
+    "orm": "^3.2.3",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-dropzone": "^3.9.2",
